--- a/project/project.Android/project.Android.csproj
+++ b/project/project.Android/project.Android.csproj
@@ -92,7 +92,6 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\project\project.csproj">
@@ -101,13 +100,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\1.PNG" />
-    <Content Include="Assets\2.PNG" />
-    <Content Include="Assets\3.PNG" />
-    <Content Include="Assets\4.PNG" />
-    <Content Include="Assets\back.PNG" />
-    <Content Include="Assets\main.jpg" />
-    <Content Include="Assets\next.PNG" />
+    <AndroidResource Include="Resources\drawable\back.PNG" />
+    <AndroidResource Include="Resources\drawable\main.jpg" />
+    <AndroidResource Include="Resources\drawable\next.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
